--- a/k8s_deployment_service.yaml
+++ b/k8s_deployment_service.yaml
@@ -16,7 +16,7 @@ spec:
         app: devsecops
     spec:
       containers:
-      - image: replace
+      - image: parthamaiti/samplewebapp:test
         name: devsecops-container
 ---
 apiVersion: v1
@@ -29,7 +29,7 @@ spec:
   ports:
   - port: 8080
     protocol: TCP
-    targetPort: 8080
+    targetPort: 8091
   selector:
     app: devsecops
   type: NodePort
